--- a/src/app/componentes/perfil/perfil.component.html
+++ b/src/app/componentes/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center">
+<div class="card text-center" *ngIf="podeExibir">
   <div class="card-body row">
     <div class="col-6">
       <img [src]="usuario.avatar" class="avatar">
