--- a/src/app/jogos/linguagens/alfabeto/alfabeto.component.html
+++ b/src/app/jogos/linguagens/alfabeto/alfabeto.component.html
@@ -1,5 +1,8 @@
 <app-btn-back></app-btn-back>
 <app-sound></app-sound>
+<app-perfil></app-perfil>
+<app-reacoes></app-reacoes>
+<app-reload></app-reload>
 <div class="container-fluid">
   <div class="text-center mt-3" style="color: #FFFFFF;">
     <h2>{{ literals.jogoAlfabetoDescricao }}</h2>
