--- a/src/app/main/temas/temas.component.html
+++ b/src/app/main/temas/temas.component.html
@@ -1,5 +1,6 @@
 <app-btn-back></app-btn-back>
 <app-sound></app-sound>
+<app-perfil></app-perfil>
 <div class="container-fluid" [ngClass]="[tema.background]">
   <div class="text-center pt-3">
     <h1>{{ tema.nome }}</h1>
