--- a/src/app/main/usuario/ranking/ranking.component.html
+++ b/src/app/main/usuario/ranking/ranking.component.html
@@ -1,11 +1,15 @@
 <app-btn-back></app-btn-back>
 <app-sound></app-sound>
 <div class="container-fluid">
-  <div class="text-center pt-3" *ngIf="usuarios.length == 0">
+  <div class="text-center pt-3" *ngIf="usuarios.length == 0 && !carregandoRequisicao">
     <h2>{{ literals.nenhumJogadorDisponivel }}</h2>
     <button class="btn btn-light" (click)="navigateCadastro()">+</button>
   </div>
-  <div class="container" *ngIf="usuarios.length > 0">
+  <div class="text-center pt-4" *ngIf="carregandoRequisicao">
+    <div class="spinner-border" role="status">
+    </div>
+  </div>
+  <div class="container" *ngIf="usuarios.length > 0 && !carregandoRequisicao">
     <table class="table table-striped table-hover text-center">
       <thead>
         <tr>
