--- a/src/app/jogos/linguagens/iniciais/iniciais.component.css
+++ b/src/app/jogos/linguagens/iniciais/iniciais.component.css
@@ -11,8 +11,9 @@
 }
 
 .card-img-top {
-  width: 150px;
-  height: 130px;
+  width: 110px;
+  height: 100px;
+  margin-left: 1.5em;
 }
 
 .card-body {
@@ -32,3 +33,4 @@ li {
   border: #808080 solid 1px 1px 0px 1px;
   width: 159px;
 }
+
