--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,30 +1,44 @@
 <div class="container-fluid">
   <app-linguagens></app-linguagens>
   <app-sound [home]="true"></app-sound>
-  <app-perfil [usuario]="usuarioLogado" *ngIf="logado"></app-perfil>
+  <app-perfil *ngIf="logado"></app-perfil>
   <div class="row mt-4">
     <div class="px-4 col-8">
       <span class="subtitle">{{ literals.subtitulo }}</span>
       <h1 class="title">LearningIsFun</h1>
     </div>
     <div class="menu col-4 text-end">
-      <button class="btn btn-light" pTooltip="Ranking" tooltipPosition="left" (mouseenter)="lerTexto('ranking')" (mouseleave)="pararLeitura()" (click)="navigate('ranking')"><img src="assets/main/trophy.png"></button>
+      <button class="btn btn-light" pTooltip="Ranking" tooltipPosition="left" (mouseenter)="lerTexto('ranking')" (mouseleave)="pararLeitura()" (click)="navigate('ranking')"><img src="assets/main/trophy.jpeg"></button>
       <button class="btn btn-light" (mouseenter)="lerTexto(literals.tooltipPlay)" (mouseleave)="pararLeitura()" [pTooltip]="literals.tooltipPlay" tooltipPosition="left" (click)="navigate('cadastro')"><img src="assets/main/add.png"></button>
       <button class="btn btn-light" (mouseenter)="lerTexto(literals.tooltipSave)" (mouseleave)="pararLeitura()" [pTooltip]="literals.tooltipSave" tooltipPosition="left" (click)="navigate('login')"><img src="assets/main/kids.png"></button>
     </div>
   </div>
   <div class="modulos row">
     <div class="col-3 text-center">
-      <button class="btn btn-light" (mouseenter)="lerTexto(literals.linguagens)" (mouseleave)="pararLeitura()" [pTooltip]="literals.linguagens" tooltipPosition="bottom"(click)="verificarLogin('temas/1', 'login')"><img src="assets/main/abc.png"></button>
+      <button class="btn btn-light" (mouseenter)="lerTexto(literals.linguagens)" (mouseleave)="pararLeitura()" (click)="verificarLogin('temas/1', 'login')"><img src="assets/main/abc.png"></button>
     </div>
     <div class="col-3 text-center">
-      <button class="btn btn-light" (mouseenter)="lerTexto(literals.matematica)" (mouseleave)="pararLeitura()" [pTooltip]="literals.matematica" tooltipPosition="bottom"(click)="verificarLogin('temas/2', 'login')"><img src="assets/main/math.png"></button>
+      <button class="btn btn-light" (mouseenter)="lerTexto(literals.matematica)" (mouseleave)="pararLeitura()" (click)="verificarLogin('temas/2', 'login')"><img src="assets/main/math.png"></button>
     </div>
     <div class="col-3 text-center">
-      <button class="btn btn-light" (mouseenter)="lerTexto(literals.ciencias)" (mouseleave)="pararLeitura()" [pTooltip]="literals.ciencias" tooltipPosition="bottom"(click)="verificarLogin('temas/3', 'login')"><img src="assets/main/ciencia.png"></button>
+      <button class="btn btn-light" (mouseenter)="lerTexto(literals.ciencias)" (mouseleave)="pararLeitura()" (click)="verificarLogin('temas/3', 'login')"><img src="assets/main/ciencia.png"></button>
     </div>
     <div class="col-3 text-center">
-      <button class="btn btn-light" (mouseenter)="lerTexto(literals.humanas)" (mouseleave)="pararLeitura()" [pTooltip]="literals.humanas" tooltipPosition="bottom"(click)="verificarLogin('temas/4', 'login')"><img src="assets/main/geo.png"></button>
+      <button class="btn btn-light" (mouseenter)="lerTexto(literals.humanas)" (mouseleave)="pararLeitura()" (click)="verificarLogin('temas/4', 'login')"><img src="assets/main/geo.png"></button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3 text-center">
+      <span>{{ literals.linguagens }}</span>
+    </div>
+    <div class="col-3 text-center">
+      <span>{{ literals.matematica }}</span>
+    </div>
+    <div class="col-3 text-center">
+      <span>{{ literals.ciencias }}</span>
+    </div>
+    <div class="col-3 text-center">
+      <span>{{ literals.humanas }}</span>
     </div>
   </div>
   <div class="icon text-center">
