--- a/src/app/main/linguagens/linguagens.component.html
+++ b/src/app/main/linguagens/linguagens.component.html
@@ -1,5 +1,5 @@
 <div class="linguagens text-end my-2 px-4">
-  <button type="button" (mouseenter)="lerTexto('Español')" (mouseleave)="pararLeitura()" pTooltip="ES" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('es-es')"><img src="../../../assets/main/espanha.png"></button>
-  <button type="button" (mouseenter)="lerTexto('English')" (mouseleave)="pararLeitura()" pTooltip="EN" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('en-us')"><img src="../../../assets/main/eua.png"></button>
-  <button type="button" (mouseenter)="lerTexto('Português')" (mouseleave)="pararLeitura()" pTooltip="PT" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('pt-br')"><img src="../../../assets/main/brasil.jpg"></button>
+  <button type="button" (mouseenter)="lerTexto(literals.espanhol)" (mouseleave)="pararLeitura()" pTooltip="ES" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('es-es')"><img src="../../../assets/main/espanha.png"></button>
+  <button type="button" (mouseenter)="lerTexto(literals.ingles)" (mouseleave)="pararLeitura()" pTooltip="EN" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('en-us')"><img src="../../../assets/main/eua.png"></button>
+  <button type="button" (mouseenter)="lerTexto(literals.portugues)" (mouseleave)="pararLeitura()" pTooltip="PT" tooltipPosition="bottom" class="btn btn-light" (click)="selecionarIdioma('pt-br')"><img src="../../../assets/main/brasil.jpg"></button>
 </div>
