--- a/src/app/componentes/sound/sound.component.html
+++ b/src/app/componentes/sound/sound.component.html
@@ -1,3 +1,3 @@
 <button class="btn btn-light" [ngClass]="[home ? 'home' : 'sound']">
-  <img [src]="soundOn ? 'assets/main/sound.png' : 'assets/main/no-sound.png'" (click)="ativarDesativarSom()">
+  <img [src]="soundOn ? 'assets/main/sound.png' : 'assets/main/no-sound.png'" (click)="ativarDesativarSom()" (mouseenter)="lerBotao()" (mouseleave)="parar()">
 </button>
