--- a/src/app/jogos/humanas/comunicacao/comunicacao.component.html
+++ b/src/app/jogos/humanas/comunicacao/comunicacao.component.html
@@ -5,20 +5,20 @@
 <app-reload></app-reload>
 <div class="container-fluid">
   <div class="text-center" style="color: #FFFFFF;">
-    <h2>{{ literals.jogoIniciaisDescricao }}</h2>
-    <p>{{ literals.jogoIniciaisDica }}</p>
+    <h2>{{ literals.jogoMeiosComunicacaoDescricao }}</h2>
+    <p>{{ literals.jogoMeiosComunicacaoDica }}</p>
   </div>
   <div class="row" *ngIf="palavras">
     <div class="col-3 p-2" *ngFor="let palavra of palavras">
       <div class="card">
-        <img [src]="palavra.imagem"  class="card-img-top">
+        <img [src]="palavra.imagem"  class="card-img-top" (mouseenter)="lerUndescore(palavra.palavra)" (mouseleave)="parar()">
         <div class="card-body">
           <div class="palavra text-center">
             <h5>{{ palavra.palavra }}</h5>
           </div>
           <ul class="list-group list-group-horizontal text-center">
             <button class="btn-heart" *ngFor="let resposta of palavra.respostas" [disabled]="resposta.isBloqueado" (click)="verificarResposta(palavra, resposta)">
-            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}">{{resposta.resposta}}</li></button>
+            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}" (mouseenter)="lerTexto(resposta.resposta)" (mouseleave)="parar()">{{resposta.resposta}}</li></button>
           </ul>
         </div>
       </div>
