--- a/src/app/jogos/humanas/folclore/folclore.component.html
+++ b/src/app/jogos/humanas/folclore/folclore.component.html
@@ -2,6 +2,7 @@
 <app-perfil></app-perfil>
 <app-reacoes></app-reacoes>
 <app-reload></app-reload>
+<app-sound></app-sound>
 <div class="container-fluid">
   <div class="text-center mt-3" style="color: #FFFFFF;">
     <h2>{{ literals.jogoFolcloreDescricao }}</h2>
@@ -10,14 +11,14 @@
   <div class="row" *ngIf="palavras">
     <div class="col-3 p-2" *ngFor="let palavra of palavras">
       <div class="card text-center">
-        <img [src]="palavra.imagem"  class="card-img-top">
+        <img [src]="palavra.imagem"  class="card-img-top"  (mouseenter)="lerUndescore(palavra.palavra)" (mouseleave)="parar()">
         <div class="card-body">
           <div class="palavra text-center">
             <h5>{{ palavra.palavra }}</h5>
           </div>
           <ul class="list-group list-group-horizontal text-center">
             <button class="btn-heart" *ngFor="let resposta of palavra.respostas" [disabled]="resposta.isBloqueado" (click)="verificarResposta(palavra, resposta)">
-            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}">{{resposta.resposta}}</li></button>
+            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}" (mouseenter)="lerTexto(resposta.resposta)" (mouseleave)="parar()">{{resposta.resposta}}</li></button>
           </ul>
         </div>
       </div>
