--- a/src/app/jogos/linguagens/cores-frutas/cores-frutas.component.html
+++ b/src/app/jogos/linguagens/cores-frutas/cores-frutas.component.html
@@ -2,6 +2,7 @@
 <app-perfil></app-perfil>
 <app-reacoes></app-reacoes>
 <app-reload></app-reload>
+<app-sound></app-sound>
 <div class="container-fluid">
   <div class="text-center mt-3" style="color: #FFFFFF;">
     <h2>{{ literals.jogoCoresFrutasDescricao }}</h2>
@@ -12,7 +13,7 @@
         <div class="col-6">
           <div class="drop-place">
             <div *ngFor="let drop of listaDrop" [ngStyle]="{'margin-top':drop.posicaoY, 'margin-left':drop.posicaoX}">
-              <div class="drop icons" cdkDropList [cdkDropListData]="drop.puzzleList" (cdkDropListDropped)="dropResposta($event, drop)">
+              <div class="drop icons" cdkDropList [cdkDropListData]="drop.puzzleList" (cdkDropListDropped)="dropResposta($event, drop)" (mouseenter)="lerTexto(drop.nome)" (mouseleave)="parar()">
               <img *ngFor="let puzzle of drop.puzzleList" [cdkDragDisabled]="acertouTudo" cdkDrag [src]="puzzle.imagem" class="icons">
             </div>
           </div>
@@ -21,8 +22,8 @@
     </div>
     <div class="row">
       <div class="col-6 mt-4">
-        <div class="puzzle-list" cdkDropList [cdkDropListData]="formas" (cdkDropListDropped)="drop($event)">
-          <img *ngFor="let parte of formas" [cdkDragDisabled]="acertouTudo" cdkDrag [src]="parte.imagem" class="icons">
+        <div class="puzzle-list" cdkDropList [cdkDropListData]="frutas" (cdkDropListDropped)="drop($event)">
+          <img *ngFor="let fruta of frutas" [cdkDragDisabled]="acertouTudo" cdkDrag [src]="fruta.imagem" class="icons" (mouseenter)="lerTexto(fruta.nome)" (mouseleave)="parar()">
         </div>
       </div>
     </div>
