--- a/src/app/jogos/matematica/coracoes/coracoes.component.html
+++ b/src/app/jogos/matematica/coracoes/coracoes.component.html
@@ -2,6 +2,7 @@
 <app-perfil></app-perfil>
 <app-reacoes></app-reacoes>
 <app-reload></app-reload>
+<app-sound></app-sound>
 <div class="container-fluid">
   <div class="text-center mt-3" style="color: #FFFFFF;">
     <h2>{{ literals.jogoCoracoesDescricao }}</h2>
@@ -14,7 +15,7 @@
         <div class="card-body">
           <ul class="list-group list-group-horizontal text-center">
             <button class="btn-heart" *ngFor="let resposta of coracao.respostas" [disabled]="resposta.isBloqueado" (click)="verificarResposta(coracao, resposta)">
-            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}">{{resposta.resposta}}</li></button>
+            <li class="list-group-item" [ngStyle]="{'background-color': resposta.cor}" (mouseenter)="lerTexto(resposta.resposta.toString())" (mouseleave)="parar()">{{resposta.resposta}}</li></button>
           </ul>
         </div>
       </div>
