--- a/src/app/jogos/matematica/encaixar-formas/encaixar-formas.component.html
+++ b/src/app/jogos/matematica/encaixar-formas/encaixar-formas.component.html
@@ -2,6 +2,7 @@
 <app-perfil></app-perfil>
 <app-reacoes></app-reacoes>
 <app-reload></app-reload>
+<app-sound></app-sound>
 <div class="container-fluid">
   <div class="text-center mt-3" style="color: #FFFFFF;">
     <h2>{{ literals.jogoEncaixarFormasDescricao }}</h2>
@@ -22,7 +23,7 @@
     <div class="row">
       <div class="col-6 mt-4">
         <div class="puzzle-list" cdkDropList [cdkDropListData]="formas" (cdkDropListDropped)="drop($event)">
-          <img *ngFor="let parte of formas" [cdkDragDisabled]="acertouTudo" cdkDrag [src]="parte.imagem" class="icons">
+          <img *ngFor="let parte of formas" [cdkDragDisabled]="acertouTudo" cdkDrag [src]="parte.imagem" class="icons" (mouseenter)="lerTexto(parte.nome)" (mouseleave)="parar()">
         </div>
       </div>
     </div>
